refactor(service): ♻️ 重构命令执行和服务安装逻辑
重构CommandExecutionServiceImpl和ServiceInstallationServiceImpl，主要变更包括：
1. 移除未使用的转换器ClusterServiceCommandHostCommandConverter，直接使用DTO操作
2. 采用JDK21特性优化代码结构，如var语法和Record类型
3. 简化实体与DTO之间的转换逻辑
4. 统一WebUI的处理方式，改为使用DTO
5. 优化服务停止方法的异常处理

这些修改旨在提高代码可读性和维护性，减少不必要的类型转换，并利用现代Java特性简化代码结构。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>